--- a/h2o/properties.yaml
+++ b/h2o/properties.yaml
@@ -1,6 +1,6 @@
 h20Flow:
     title: "H2O Flow"
-    start: [ "/var/opt/workspaces/h2o/start.sh" ]
+    start: [ "/var/opt/workspaces/h2o/start" ]
     httpProxy:
         port: 8888
         rewrite: false
