--- a/h2o/properties.yaml
+++ b/h2o/properties.yaml
@@ -1,6 +1,6 @@
 h20Flow:
     title: "H2O Flow"
+    iconUrl: "https://raw.github.com/ChuckRIHead/cerebrotech/workspace-configs/master/workspace-logos/H2O.svg?sanitize=true"
     start: [ "/var/opt/workspaces/h2o/start" ]
     httpProxy:
         port: 8888
-        rewrite: false
