--- a/jupyter/properties.yaml
+++ b/jupyter/properties.yaml
@@ -1,6 +1,6 @@
 jupyter:
   title: "Jupyter (Python, R)"
-  iconUrl: "/assets/images/workspace-logos/Jupyter.svg"
+  iconUrl: "https://raw.github.com/cerebrotech/workspace-configs/master/workspace-logos/Jupyter.svg?sanitize=true"
   start: [ "/var/opt/workspaces/jupyter/start" ]
   httpProxy:
     port: 8888
