--- a/superset/properties.yaml
+++ b/superset/properties.yaml
@@ -1,6 +1,6 @@
 superset:
   title: "Superset"
-  iconUrl: "https://github.com/ChuckRIHead/cerebrotech/workspace-configs/master/workspace-logos/Superset.png?raw=true"
-  start: [ "/var/opt/workspaces/superset-standardbase/start.sh" ]
+  iconUrl: "https://raw.githubusercontent.com/cerebrotech/workspace-configs/master/workspace-logos/Superset.png"
+  start: [ "/var/opt/workspaces/superset/start.sh" ]
   httpProxy:
     port: 8088
