--- a/jupyter-tensorboard/properties.yaml
+++ b/jupyter-tensorboard/properties.yaml
@@ -1,9 +1,8 @@
 jupyter:
   title: "Jupyter (Python, R, Julia)"
-  iconUrl: "/assets/images/workspace-logos/Jupyter.svg"
+  iconUrl: "https://raw.githubusercontent.com/dominodatalab/workspace-configs/develop/workspace-logos/tensorboard.png?sanitize=true"
   start: [ "/var/opt/workspaces/jupyter/start" ]
   httpProxy:
     port: 8888
     rewrite: false
     internalPath: "/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}"
-  supportedFileExtensions: [ ".ipynb" ]
