--- a/theia/package.json
+++ b/theia/package.json
@@ -1,46 +1,53 @@
 {
     "private": true,
     "dependencies": {
-        "@theia/callhierarchy": "^0.3.19",
-        "@theia/console": "^0.3.19",
-        "@theia/core": "^0.3.19",
-        "@theia/debug": "^0.3.19",
-        "@theia/editor": "^0.3.19",
-        "@theia/editor-preview": "^0.3.19",
-        "@theia/editorconfig": "^0.3.19",
-        "@theia/extension-manager": "^0.3.19",
-        "@theia/file-search": "^0.3.19",
-        "@theia/filesystem": "^0.3.19",
-        "@theia/getting-started": "^0.3.19",
-        "@theia/git": "^0.3.19",
-        "@theia/json": "^0.3.19",
-        "@theia/keymaps": "^0.3.19",
-        "@theia/languages": "^0.3.19",
-        "@theia/markers": "^0.3.19",
-        "@theia/merge-conflicts": "^0.3.19",
-        "@theia/messages": "^0.3.19",
-        "@theia/metrics": "^0.3.19",
-        "@theia/mini-browser": "^0.3.19",
-        "@theia/monaco": "^0.3.19",
-        "@theia/navigator": "^0.3.19",
-        "@theia/outline-view": "^0.3.19",
-        "@theia/output": "^0.3.19",
-        "@theia/plugin-ext": "^0.3.19",
-        "@theia/plugin-ext-vscode": "^0.3.19",
-        "@theia/preferences": "^0.3.19",
-        "@theia/preview": "^0.3.19",
-        "@theia/process": "^0.3.19",
-        "@theia/python": "^0.3.19",
-        "python-debug": "1.0.0",
-        "@theia/search-in-workspace": "^0.3.19",
-        "@theia/task": "^0.3.19",
-        "@theia/terminal": "^0.3.19",
-        "@theia/textmate-grammars": "^0.3.19",  
-        "@theia/userstorage": "^0.3.19",
-        "@theia/variable-resolver": "^0.3.19",
-        "@theia/workspace": "^0.3.19"
+        "typescript": "latest",
+        "@theia/callhierarchy": "latest",
+        "@theia/core": "latest",
+        "@theia/cpp": "latest",
+        "@theia/editor": "latest",
+        "@theia/editorconfig": "latest",
+        "@theia/extension-manager": "latest",
+        "@theia/file-search": "latest",
+        "@theia/filesystem": "latest",
+        "@theia/git": "latest",
+        "@theia/go": "latest",
+        "@theia/java": "latest",
+        "@theia/json": "latest",
+        "@theia/keymaps": "latest",
+        "@theia/languages": "latest",
+        "@theia/markers": "latest",
+        "@theia/merge-conflicts": "latest",
+        "@theia/messages": "latest",
+        "@theia/metrics": "latest",
+        "@theia/mini-browser": "latest",
+        "@theia/monaco": "latest",
+        "@theia/navigator": "latest",
+        "@theia/outline-view": "latest",
+        "@theia/output": "latest",
+        "@theia/plantuml": "latest",
+        "@theia/plugin": "latest",
+        "@theia/plugin-ext": "latest",
+        "@theia/plugin-ext-vscode": "latest",
+        "@theia/preferences": "latest",
+        "@theia/preview": "latest",
+        "@theia/process": "latest",
+        "@theia/python": "latest",
+        "@theia/rust": "latest",
+        "@theia/search-in-workspace": "latest",
+        "@theia/task": "latest",
+        "@theia/terminal": "latest",
+        "@theia/textmate-grammars": "latest",
+        "@theia/typescript": "latest",
+        "@theia/userstorage": "latest",
+        "@theia/variable-resolver": "latest",
+        "@theia/workspace": "latest",
+        "@theia/console": "latest",
+        "@theia/debug": "latest",
+        "python-debug": "latest",
     },
     "devDependencies": {
-        "@theia/cli": "next"
+        "@theia/cli": "latest"
     }
 }
+
