--- a/theia/package.json
+++ b/theia/package.json
@@ -44,7 +44,7 @@
         "@theia/workspace": "latest",
         "@theia/console": "^0.3.19",
         "@theia/debug": "^0.3.19",
-        "python-debug": "1.0.0",
+        "python-debug": "1.0.0"
         
     },
     "devDependencies": {
