pinning theia core

--- a/theia/package.json
+++ b/theia/package.json
@@ -3,7 +3,7 @@
     "dependencies": {
         "typescript": "latest",
         "@theia/callhierarchy": "latest",
-        "@theia/core": "latest",
+        "@theia/core": "^0.3.19",
         "@theia/cpp": "latest",
         "@theia/editor": "latest",
         "@theia/editorconfig": "latest",
@@ -42,6 +42,8 @@
         "@theia/userstorage": "latest",
         "@theia/variable-resolver": "latest",
         "@theia/workspace": "latest",
+        "@theia/console": "^0.3.19",
+        "@theia/debug": "^0.3.19",
         "python-debug": "1.0.0"
         
     },
@@ -49,4 +51,3 @@
         "@theia/cli": "latest"
     }
 }
-
