--- a/theia/package.json
+++ b/theia/package.json
@@ -1,50 +1,19 @@
+#https://github.com/theia-ide/theia-apps/blob/master/theia-python-docker/latest.package.json
 {
     "private": true,
     "dependencies": {
-        "typescript": "latest",
-        "@theia/callhierarchy": "latest",
-        "@theia/core": "^0.3.19",
-        "@theia/cpp": "latest",
-        "@theia/editor": "latest",
-        "@theia/editorconfig": "latest",
-        "@theia/extension-manager": "latest",
-        "@theia/file-search": "latest",
-        "@theia/filesystem": "latest",
-        "@theia/go": "latest",
-        "@theia/java": "latest",
-        "@theia/json": "latest",
-        "@theia/keymaps": "latest",
-        "@theia/languages": "latest",
-        "@theia/markers": "latest",
-        "@theia/merge-conflicts": "latest",
-        "@theia/messages": "latest",
-        "@theia/metrics": "latest",
-        "@theia/mini-browser": "latest",
-        "@theia/monaco": "latest",
-        "@theia/navigator": "latest",
-        "@theia/outline-view": "latest",
-        "@theia/output": "latest",
-        "@theia/plantuml": "latest",
-        "@theia/plugin": "latest",
-        "@theia/plugin-ext": "latest",
-        "@theia/plugin-ext-vscode": "latest",
-        "@theia/preferences": "latest",
-        "@theia/preview": "latest",
-        "@theia/process": "latest",
         "@theia/python": "latest",
-        "@theia/rust": "latest",
-        "@theia/search-in-workspace": "latest",
-        "@theia/task": "latest",
+        "@theia/messages": "latest",
+        "@theia/navigator": "latest",
         "@theia/terminal": "latest",
+        "@theia/outline-view": "latest",
+        "@theia/preferences": "latest",
+        "@theia/git": "latest",
+        "@theia/file-search": "latest",
+        "@theia/markers": "latest",
         "@theia/textmate-grammars": "latest",
-        "@theia/typescript": "latest",
-        "@theia/userstorage": "latest",
-        "@theia/variable-resolver": "latest",
-        "@theia/workspace": "latest",
-        "@theia/console": "^0.3.19",
-        "@theia/debug": "^0.3.19",
-        "python-debug": "1.0.0"
-        
+        "@theia/search-in-workspace": "latest",
+        "@theia/json": "latest"
     },
     "devDependencies": {
         "@theia/cli": "latest"
