--- a/theia/package.json
+++ b/theia/package.json
@@ -41,7 +41,8 @@
         "@theia/typescript": "latest",
         "@theia/userstorage": "latest",
         "@theia/variable-resolver": "latest",
-        "@theia/workspace": "latest"
+        "@theia/workspace": "latest",
+         "python-debug": "1.0.0"
     },
     "devDependencies": {
         "@theia/cli": "latest"
