--- a/vscode/properties.yaml
+++ b/vscode/properties.yaml
@@ -1,6 +1,6 @@
-code-server:
- title: "code-server"
+vscode:
+ title: "vscode"
  iconUrl: "https://raw.github.com/dominodatalab/workspace-configs/develop/workspace-logos/vscode.svg?sanitize=true"
- start: [ "/var/opt/workspaces/code-server/start" ]
+ start: [ "/var/opt/workspaces/vscode/start" ]
  httpProxy:
     port: 8888
