--- a/jupyter/properties.yaml
+++ b/jupyter/properties.yaml
@@ -1,9 +1,8 @@
 jupyter:
-  title: "Jupyter (Python, R)"
+  title: "Jupyter (Python, R, Julia)"
   iconUrl: "https://raw.github.com/dominodatalab/workspace-configs/develop/workspace-logos/Jupyter.svg?sanitize=true"
   start: [ "/var/opt/workspaces/jupyter/start" ]
   httpProxy:
     port: 8888
     rewrite: false
     internalPath: "/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}"
-  supportedFileExtensions: [ ".ipynb" ]
