--- a/jupyter/properties.yaml
+++ b/jupyter/properties.yaml
@@ -5,5 +5,5 @@ jupyter:
   httpProxy:
     port: 8888
     rewrite: false
-    internalPath: "/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}"
+    internalPath: "/{{ownerUsername}}/{{projectName}}/{{sessionPathComponent}}/{{runId}}/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}"
   supportedFileExtensions: [ ".ipynb" ]
