--- a/jupyter/properties.yaml
+++ b/jupyter/properties.yaml
@@ -6,4 +6,5 @@ jupyter:
     port: 8888
     rewrite: false
     internalPath: "/{{ownerUsername}}/{{projectName}}/{{sessionPathComponent}}/{{runId}}/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}"
+    requreSubdomain: false
   supportedFileExtensions: [ ".ipynb" ]
