--- a/jupyter-tensorboard/properties.yaml
+++ b/jupyter-tensorboard/properties.yaml
@@ -6,3 +6,4 @@ jupyter-tensorboard:
     port: 8888
     rewrite: false
     internalPath: "/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}"
+    requireSubdomain: false
