--- a/Jupyterlab/properties.yaml
+++ b/Jupyterlab/properties.yaml
@@ -1,8 +1,9 @@
 jupyterlab:
-    title: "JupyterLab"
-    iconUrl: "https://raw.githubusercontent.com/dominodatalab/workspace-configs/develop/workspace-logos/jupyterlab.svg?sanitize=true"
-    start: [  /var/opt/workspaces/Jupyterlab/start.sh ]
-    httpProxy:
-        internalPath: "/{{#if pathToOpen}}/lab/tree/{{pathToOpen}}{{/if}}"
-        port: 8888
-        rewrite: false
+  title: "JupyterLab"
+  iconUrl: "https://raw.githubusercontent.com/dominodatalab/workspace-configs/develop/workspace-logos/jupyterlab.svg?sanitize=true"
+  start: [  /var/opt/workspaces/Jupyterlab/start.sh ]
+  httpProxy:
+    internalPath: "/{{ownerUsername}}/{{projectName}}/{{sessionPathComponent}}/{{runId}}/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}"
+    port: 8888
+    rewrite: false
+    requireSubdomain: false
