--- a/jupyter/properties.yaml
+++ b/jupyter/properties.yaml
@@ -1,8 +1,10 @@
 jupyter:
-  title: "Jupyter (Python, R, Julia)"
+  title: "Jupyter (Python, R)"
   iconUrl: "https://raw.github.com/dominodatalab/workspace-configs/develop/workspace-logos/Jupyter.svg?sanitize=true"
   start: [ "/var/opt/workspaces/jupyter/start" ]
   httpProxy:
     port: 8888
     rewrite: false
-    internalPath: "/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}"
+    internalPath: "/{{ownerUsername}}/{{projectName}}/{{sessionPathComponent}}/{{runId}}/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}"
+    requreSubdomain: false
+  supportedFileExtensions: [ ".ipynb" ]
