--- a/jupyter/properties.yaml
+++ b/jupyter/properties.yaml
@@ -6,5 +6,5 @@ jupyter:
     port: 8888
     rewrite: false
     internalPath: "/{{ownerUsername}}/{{projectName}}/{{sessionPathComponent}}/{{runId}}/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}"
-    requreSubdomain: false
+    requireSubdomain: false
   supportedFileExtensions: [ ".ipynb" ]
