--- a/pyspark/properties.yaml
+++ b/pyspark/properties.yaml
@@ -5,4 +5,4 @@ pyspark:
   httpProxy:
     port: 8888
     rewrite: false
-    internalPath: "/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}"
+    internalPath: "/{{ownerUsername}}/{{projectName}}/{{sessionPathComponent}}/{{runId}}/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}"
