--- a/pyspark/properties.yaml
+++ b/pyspark/properties.yaml
@@ -6,4 +6,4 @@ pyspark:
     port: 8888
     rewrite: false
     internalPath: "/{{ownerUsername}}/{{projectName}}/{{sessionPathComponent}}/{{runId}}/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}"
-    requireSubdomains: false
+    requireSubdomain: false
