--- a/h2o/properties.yaml
+++ b/h2o/properties.yaml
@@ -5,5 +5,5 @@ h20Flow:
   httpProxy:
     port: 8888
     internalPath: "/{{ownerUsername}}/{{projectName}}/{{sessionPathComponent}}/{{runId}}/"
-    requireSubdomains: false
+    requireSubdomain: false
 
